k8s/app/templates/istio/nginx.yaml
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: docker.io/majuansari/ing-nginx-test
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/
          name: conf     
        - mountPath: /code
          name: code                    
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi"
            cpu: "1m"
          limits:
            memory: "128Mi"
            cpu: "5m"
      volumes:
      - name: conf
        hostPath:
          # Ensure the file directory is created.
          path: /Users/maju.ansari/Documents/Projects/shukran/shukran/kub/app/templates/istio/conf
          type: Directory       
      - name: code
        hostPath:
          # Ensure the file directory is created.
          path: /Users/maju.ansari/Documents/Projects/shukran/shukran/kub/app/templates/istio/code
          type: Directory                          
---
kind: Service
apiVersion: v1
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
