k8s/app/templates/istio/php.yaml
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: php
spec:
  selector:
    matchLabels:
      app: php
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"    
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: docker.io/majuansari/ing-php-test
        volumeMounts:
        - mountPath: /code
          name: code        
        ports:
        - containerPort: 9000
        resources:
          requests:
            memory: "16Mi"
            cpu: "1m"
          limits:
            memory: "128Mi"
            cpu: "20m"
      volumes:
      - name: code
        hostPath:
          # Ensure the file directory is created.
          path: /Users/maju.ansari/Documents/Projects/shukran/shukran/kub/app/templates/istio/code
          type: Directory            
---
kind: Service
apiVersion: v1
metadata:
  name: php-service
spec:
  selector:
    app: php
  type: NodePort
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
